* config/h8300/h8300.md: Remove constraints from expanders.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48736 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-10  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300.md: Remove constraints from expanders.
+
+2002-01-10  Kazu Hirata  <kazu@hxi.com>
+
 	* varasm.c: Fix formatting.
 	* varray.c: Likewise.
 	* vmsdbgout.c: Likewise.
