--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -1,6 +1,6 @@
 ;; GCC machine description for Hitachi H8/300
 ;; Copyright (C) 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000,
-;; 2001 Free Software Foundation, Inc.
+;; 2001, 2002 Free Software Foundation, Inc.
 
 ;;   Contributed by Steve Chamberlain (sac@cygnus.com),
 ;;   Jim Wilson (wilson@cygnus.com), and Doug Evans (dje@cygnus.com).
@@ -127,7 +127,7 @@
    (set_attr "cc" "clobber")])
 
 (define_expand "pushqi1"
-  [(use (match_operand:QI 0 "register_operand" "r"))]
+  [(use (match_operand:QI 0 "register_operand" ""))]
   ""
   "
 {
@@ -202,7 +202,7 @@
 
 (define_expand "pushhi1_h8300"
   [(set (mem:QI (pre_dec:HI (reg:HI 7)))
-        (match_operand:QI 0 "register_operand" "r"))]
+        (match_operand:QI 0 "register_operand" ""))]
   "TARGET_H8300"
   "")
 
@@ -217,7 +217,7 @@
    (set_attr "cc" "clobber")])
 
 (define_expand "pushhi1"
-  [(use (match_operand:QI 0 "register_operand" "r"))]
+  [(use (match_operand:QI 0 "register_operand" ""))]
   ""
   "
 {
@@ -1274,8 +1274,8 @@
    (set_attr "cc" "set_zn")])
 
 (define_expand "neghi2"
-  [(set (match_operand:HI 0 "register_operand" "=r")
-	(neg:HI (match_operand:HI 1 "general_operand" "0")))]
+  [(set (match_operand:HI 0 "register_operand" "")
+	(neg:HI (match_operand:HI 1 "general_operand" "")))]
   ""
   "
 {
@@ -1288,9 +1288,9 @@
 
 (define_expand "neghi2_h8300"
   [(set (match_dup 2)
-	(not:HI (match_operand:HI 1 "register_operand" "r")))
+	(not:HI (match_operand:HI 1 "register_operand" "")))
    (set (match_dup 2) (plus:HI (match_dup 2) (const_int 1)))
-   (set (match_operand:HI 0 "register_operand" "=r")
+   (set (match_operand:HI 0 "register_operand" "")
 	(match_dup 2))]
   ""
   "{ operands[2] = gen_reg_rtx (HImode); }")
@@ -1304,8 +1304,8 @@
    (set_attr "cc" "set_zn")])
 
 (define_expand "negsi2"
-  [(set (match_operand:SI 0 "register_operand" "=r")
-	(neg:SI (match_operand:SI 1 "general_operand" "0")))]
+  [(set (match_operand:SI 0 "register_operand" "")
+	(neg:SI (match_operand:SI 1 "general_operand" "")))]
   ""
   "
 {
@@ -1318,9 +1318,9 @@
 
 (define_expand "negsi2_h8300"
   [(set (match_dup 2)
-	(not:SI (match_operand:SI 1 "register_operand" "r")))
+	(not:SI (match_operand:SI 1 "register_operand" "")))
    (set (match_dup 2) (plus:SI (match_dup 2) (const_int 1)))
-   (set (match_operand:SI 0 "register_operand" "=r")
+   (set (match_operand:SI 0 "register_operand" "")
 	(match_dup 2))]
   ""
   "{ operands[2] = gen_reg_rtx(SImode); }")
@@ -1556,7 +1556,7 @@
 ;; This is a define expand, because pointers may be either 16 or 32 bits.
 
 (define_expand "tablejump"
-  [(parallel [(set (pc) (match_operand 0 "register_operand" "r"))
+  [(parallel [(set (pc) (match_operand 0 "register_operand" ""))
 	      (use (label_ref (match_operand 1 "" "")))])]
   ""
   "")
