* combine.c (expand_field_assignment): Use subreg_lsb().
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48742 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-10  Kazu Hirata  <kazu@hxi.com>
+
+	* combine.c (expand_field_assignment): Use subreg_lsb().
+
 2002-01-10  David Edelsohn  <edelsohn@gnu.org>
 
 	* alias.c (find_base_value): Add cases for HIGH, PRE_INC, PRE_DEC,
