--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-10  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.h: Fix formatting.
+
 2001-01-10  Ira Ruben	<ira@apple.com>
 
 	Add __attribute__ ((deprecated)).
