--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-10  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* doc/invoke.texi: Document PDP-11 options.
+
 2002-01-10  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.h: Fix formatting.
