--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-10  Dale Johannesen  <dalej@apple.com>
+
+	PR optimization/5269
+	* unroll.c (precondition_loop_p): Make *increment be the correct
+	sign when n_iterations known, to avoid confusing caller.
+
 2002-01-10  Kazu Hirata  <kazu@hxi.com>
 
 	* doc/extend.texi (deprecated): Fix a typo.
