* config/h8300/h8300.h: Fix comment typos. 	* config/h8300/h8300.md: Likewise. 	* config/h8300/lib1funcs.asm: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48754 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -44,11 +44,12 @@
 ;; "worst case" and then be adjusted to their correct values by
 ;; h8300_adjust_insn_length.
 
-;; On the h8300h, adds/subs operate on the 32bit "er" registers.  Right
-;; now GCC doesn't expose the "e" half to the compiler, so using add/subs
-;; for addhi and subhi is safe.
-;; Long term, we want to expose the "e" half to the compiler (gives us
-;; 8 more 16bit registers).  At that point addhi and subhi can't use adds/subs.
+;; On the H8/300H and H8/S, adds/subs operate on the 32bit "er"
+;; registers.  Right now GCC doesn't expose the "e" half to the
+;; compiler, so using add/subs for addhi and subhi is safe.  Long
+;; term, we want to expose the "e" half to the compiler (gives us 8
+;; more 16bit registers).  At that point addhi and subhi can't use
+;; adds/subs.
 
 ;; There's currently no way to have a insv/extzv expander for the H8/300H
 ;; because word_mode is different for the H8/300 and H8/300H.
@@ -1600,7 +1601,7 @@
 
 ;; Call subroutine with no return value.
 
-;; ??? Even though we use HImode here, this works for the 300h.
+;; ??? Even though we use HImode here, this works on the H8/300H and H8/S.
 
 (define_insn "call"
   [(call (match_operand:QI 0 "call_insn_operand" "or")
@@ -1623,7 +1624,7 @@
 ;; Call subroutine, returning value in operand 0
 ;; (which must be a hard register).
 
-;; ??? Even though we use HImode here, this works on the 300h.
+;; ??? Even though we use HImode here, this works on the H8/300H and H8/S.
 
 (define_insn "call_value"
   [(set (match_operand 0 "" "=r")
