--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-10  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.h: Fix comment typos.
+	* config/h8300/h8300.md: Likewise.
+	* config/h8300/lib1funcs.asm: Likewise.
+
 2002-01-10  Dale Johannesen  <dalej@apple.com>
 
 	PR optimization/5269
