* toplev.c: Don't declare environ (it's not used anywhere). 	* configure.in: Don't check for declaration of environ. 	* config/i386/xm-mingw32.h: Don't #define environ. 	* config.in, configure: Regenerate.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48758 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,12 @@
 2002-01-10  Zack Weinberg  <zack@codesourcery.com>
 
+	* toplev.c: Don't declare environ (it's not used anywhere).
+	* configure.in: Don't check for declaration of environ.
+	* config/i386/xm-mingw32.h: Don't #define environ.
+	* config.in, configure: Regenerate.
+
+2002-01-10  Zack Weinberg  <zack@codesourcery.com>
+
 	* configure.in: Set stage1_cflags for powerpc-*-darwin*.
 	* configure: Regenerate.
 
