--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-10  Aldy Hernandez  <aldyh@redhat.com>
+
+        * gcc.dg/altivec-4.c: Add tests for lvebx, lvehx, lvewx, lvxl,
+        lvx, stvx, stvebx, stvehx, stvewx, stvxl.
+
 2002-01-10  Dale Johannesen  <dalej@apple.com>
 
 	* gcc.c-torture/execute/loop-11.c: New.
