--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-11  Andreas Jaeger  <aj@suse.de>
+
+	* config/i386/i386.h (CPP_CPUCOMMON_SPEC): Remove duplicated
+	march.
+
 2002-01-10  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/alpha.c (print_operand): Add 'J'.
