Fixed objc test failing on alpha because of missing include
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48770 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jan 11 12:13:30 2002  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* objc.dg/special/unclaimed-category-1.m: Include objc/objc-api.h.
+
 2002-01-10  Aldy Hernandez  <aldyh@redhat.com>
 
         * gcc.dg/altivec-4.c: Add tests for lvebx, lvehx, lvewx, lvxl,
