--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+Fri Jan 11 09:25:05 2002  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* c-tree.h: Move function declarations so that they are listed 
+	under the filename which contains them.
+	(check_identifier, finish_decl_top_level,
+	lookup_name_current_level_global, shadow_record_fields): Remove.
+
 2002-01-11  Andreas Jaeger  <aj@suse.de>
 
 	* config/i386/i386.h (CPP_CPUCOMMON_SPEC): Remove duplicated
