Correct test of 'remainder' and 'subtargets'.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48776 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-11  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* config/arm/arm.c (arm_gen_constant): Correct test of 'remainder'
+	and 'subtargets'.
+
 2002-01-11  Andreas Jaeger  <aj@suse.de>,
 	    Brad Lucier <lucier@math.purdue.edu>
 
