* java/lang/natSystem.cc (init_properties): Only look for default 	locale if LC_MESSAGES is defined. 	* aclocal.m4, configure, include/config.h.in: Rebuilt. 	* configure.in: Call AM_LC_MESSAGES. 	* acinclude.m4 (AM_LC_MESSAGES): New macro.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48781 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,11 @@
+2002-01-11  Tom Tromey  <tromey@redhat.com>
+
+	* java/lang/natSystem.cc (init_properties): Only look for default
+	locale if LC_MESSAGES is defined.
+	* aclocal.m4, configure, include/config.h.in: Rebuilt.
+	* configure.in: Call AM_LC_MESSAGES.
+	* acinclude.m4 (AM_LC_MESSAGES): New macro.
+
 2002-01-10  Tom Tromey  <tromey@redhat.com>
 
 	For PR libgcj/5303:
